--- a/html bestanden/index.html
+++ b/html bestanden/index.html
@@ -13,7 +13,7 @@
   <ul>
         <li><a href="sjabloon.html">index</a></li>
         <li><a href="zoe.html">website Zoë</a></li>
-        <li><a href="glennpagina.html">website Glenn</a></li>
+        <li><a href="glenn1.html">website Glenn</a></li>
         
       
     </ul>
