--- a/html bestanden/zoe.html
+++ b/html bestanden/zoe.html
@@ -22,6 +22,9 @@
     
  
     <a id="home"></a>
+     <li><a href="index.html">index</a></li>
+        <li><a href="zoe.html">website Zoë</a></li>
+        <li><a href="glenn1.html">website Glenn</a></li>
     <h1> Gezelschapsspelletjes</h1>
     
      <p><a href="#monopoly">Ga naar monopoly</a></p>
