--- a/html bestanden/index.html
+++ b/html bestanden/index.html
@@ -31,8 +31,8 @@
                 
             </tr>
             <tr>
-             <td> <img src="Zo%C3%AB.jpg" alt="Zoë" width="200" height="150"><a href="https://www.facebook.com/zoe.camerlynck">Facebookpagina</a></td>   
-            <td> <img src="glenn.jpg" alt="Glenn" width="200" height="150"><a href="https://www.facebook.com/profile.php?id=100009042572716"> Facebookpagina</a></td>
+             <td> <img src="Zo%C3%AB.jpg" alt="Zoë" width="200" height="150"><a href="https://www.facebook.com/zoe.camerlynck">fb</a></td>   
+            <td> <img src="glenn.jpg" alt="Glenn" width="200" height="150"><a href="https://www.facebook.com/profile.php?id=100009042572716">fb</a></td>
                   
             </tr>
             <tr>
